Commenting index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" id="pageCss" href="">
+    <link rel="stylesheet" id="pageCss" href=""> <!--CSS is dynamically managed by the pageHandler.js file-->
     <title></title>
   </head>
   <body>
@@ -14,10 +14,8 @@
         <span class="coloredText">MONITOR</span>
       </div>
     </div>
-    <div class="pageContent">
+    <div class="pageContent"></div> <!--Div containing a dynamic content managed by the configLoader.js file-->
 
-    </div>
-    
     <script src="./renderer.js"></script>
     <script src="./js/io/verification/number_check.js"></script>
     <script src="./js/io/show_error.js"></script>
