Chart working + motd

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="pageContent"></div> <!--Div containing a dynamic content managed by the configLoader.js file-->
 
     <script src="./renderer.js"></script>
+    <script src="./js/console/console.js"></script>
     <script src="./js/modules/chart.js"></script>
     <script src="./js/modules/jquery-ui.min.js"></script>
     <script src="./js/io/verification/number_check.js"></script>
